# Traceweaver

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: generate_charts.py
dashboards/: grafana.json
tests/: test_core.py
tracebench/: __init__.py  cli.py  generator.py
traceweaver/: __init__.py  anomaly.py  cli.py  compressor.py  encoder.py  schema.sql  trace.py
