[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "traceweaver"
version = "0.1.0"
description = "Intelligent distributed trace compression and anomaly detection"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "mmh3>=4.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
storage = ["clickhouse-connect>=0.6"]
viz = ["matplotlib>=3.7"]

[project.scripts]
tracebench = "tracebench.cli:main"
traceweaver = "traceweaver.cli:main"

[tool.setuptools.packages.find]
include = ["traceweaver*", "tracebench*"]
